    just a constructor (Bug #32093)  
  - fixed problem where changing the connection string of a connection to one that changes
    the parameter marker after the connection had been assigned to a command but before
    the connection is opened can cause parameters to not be found (bug #13991)                
                
Version 1.0.10
    Bugs
    ----
    Bug #25605 BINARY and VARBINARY is returned as a string 
    Bug #24373 High CPU utilization when no idle connection 
    Bug #24957 MySql.Data.Types.MySqlConversionException is not marked as Serializable. 
    Bug #25603 Critial ConnectionPool Error in Connector.Net 5.03 
    - Fixed problem where an attempt to open a connection max pool size times while
      the server is down will prevent any further attempts due to the pool semaphore
      being full. (Bug #29409)       
    - Fixed problem where attempting to load a reader into a datatable using a table 
      with a multi-column primary key would result in multiple constraints being added
      to the datatable. No test case added to the 1.0 tree as loading a datatable
      with a reader is a .Net 2.0 thing. (bug #30204)
    
    Other
    -----
    Added "Use Procedure Bodies" connection string option to allow calling procedures without
       using procedure metadata (if possible).
    Reverted behavior that required parameter names to start with the parameter marker.  We 
       apologize for this back and forth but we mistakenly changed the behavior to not
       match what SqlClient supports.  We now support using either syntax for adding
       parameters however we also respond exactly like SqlClient in that if you ask for the
       index of a parameter using a syntax different than you added the parameter, the result
       will be -1.
    Changed installer to Inno Setup
    
Version 1.0.9
    
    Bugs fixed or addressed
    -----------------------
    Bug #23268 System.FormatException when invoking procedure with ENUM input parameter 